using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant
{
    public static readonly string RUN_ANIM_STRING = "run";
    public static readonly string IDLE_ANIM_STRING = "idle";
    public static readonly string ATTACK_ANIM_STRING = "attack";
    public static readonly string DIE_ANIM_STRING = "die";


    public const string TAG_PLAYER = "Player";
    public const string TAG_ENEMY = "Enemy";
    public const string TAG_COIN = "coin";
}
